--- a/all-recipes.html
+++ b/all-recipes.html
@@ -11,22 +11,21 @@
 		<a href="index.html"><h1>Nibbly</h1></a>
 	
 		<nav>
-			<a>Home</a>
-			<a>About</a>
-			<a>Categories</a>
-			<a>All Recipes</a>
+			<a href="about.html">About</a>
+			<a href="categories.html">Categories</a>
+			<a href="all-recipes.html">All Recipes</a>
 		</nav>
-	</div>
+		</div>
 
-<hr class="solid">
-<div class="topnav">
-  <div class="search-container">
-    <form action="/action_page.php">
-      <input type="text" placeholder="Search Here!" name="search">
-    </form>
-  </div>
-</div>
+	<hr class="solid">
+	<div class="topnav">
+		<div class="search-container">
+			<form action="/action_page.php">
+				<input type="text" placeholder="Search Here!" name="search">
+			</form>
+		</div>
+	</div>	
 	
-	<h2>Single Recipe</h2>
+	<h2>All Recipes</h2>
 </body>
 </html>
