--- a/categories.html
+++ b/categories.html
@@ -11,12 +11,11 @@
 		<a href="index.html"><h1>Nibbly</h1></a>
 	
 		<nav>
-			<a>Home</a>
-			<a>About</a>
-			<a>Categories</a>
-			<a>All Recipes</a>
+			<a href="about.html">About</a>
+			<a href="categories.html">Categories</a>
+			<a href="all-recipes.html">All Recipes</a>
 		</nav>
-	</div>
+		</div>
 
 <hr class="solid">
 <div class="topnav">
@@ -27,6 +26,6 @@
   </div>
 </div>
 	
-	<h2>Single Recipe</h2>
+	<h2>Categories</h2>
 </body>
 </html>
