--- a/index.html
+++ b/index.html
@@ -10,19 +10,28 @@
 <body>
 
 <div class="nav-bar">
-	<h1>Nibbly</h1>
+	<a href="index.html"><h1>Nibbly</h1></a>
 
 	<nav>
-		<a>Home</a>
-		<a>About</a>
-		<a>Categories</a>
-		<a>All Recipes</a>
+		<a href="about.html">About</a>
+		<a href="categories.html">Categories</a>
+		<a href="all-recipes.html">All Recipes</a>
 	</nav>
 </div>
-<h2>What's cooking, <span class="bold fade">good looking?</span></h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-<a href="recipe.html" target="_blank">Single Recipe Page</a>
+<hr class="solid">
+
+<div class="topnav">
+  <div class="search-container">
+    <form action="/action_page.php">
+      <input type="text" placeholder="Search Here!" name="search">
+    </form>
+  </div>
+</div>
+
+<h2>Welcome!</h2>
+<img class="placeholder-image" src="images/elementor-placeholder-image.webp" alt="gray-placeholder-image">
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 </body>
 </html>
