--- a/all-recipes.html
+++ b/all-recipes.html
@@ -42,5 +42,8 @@
 	<a class="recipe" href="recipe.html"><img src="images/elementor-placeholder-image.webp" alt="gray-placeholder-image"></a>
 	</div>
 
+	<footer>
+		<p>Thanks for visiting!</p>
+	</footer>
 </body>
 </html>
