--- a/no-search.html
+++ b/no-search.html
@@ -2,7 +2,7 @@
       <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Alpha</title>
+        <title>Nothing Found</title>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/style.css">
       </head>
@@ -25,12 +25,15 @@
     </div>
   </div>
   </header>
-    
-    
-	<h2>Single Recipe</h2>
+   
+<div class="nothing-found">
+<img class="sad-glass" src="icons/Nothing Found.png" alt="sad magnifying glass">
+<p class="no-results">Sorry, no results found. Let's find a fresh tart.</p>
+</div>
 
   <footer>
-    <p>Thanks for visiting!</p>
+    <p><a href="no-search">No Search</a></p>
+    <p><a href="no-search">Search</a></p>
   </footer>
 </body>
 </html>
