--- a/recipe.html
+++ b/recipe.html
@@ -2,7 +2,7 @@
       <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Alpha</title>
+        <title>Single Recipe</title>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/style.css">
       </head>
@@ -33,7 +33,8 @@
 
 
   <footer>
-    <p>Thanks for visiting!</p>
+    <p><a href="no-search">No Search</a></p>
+    <p><a href="no-search">Search</a></p>
   </footer>
 </body>
 </html>
