--- a/all-recipes.html
+++ b/all-recipes.html
@@ -2,7 +2,7 @@
       <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Alpha</title>
+        <title>All Recipes</title>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/style.css">
       </head>
@@ -41,7 +41,8 @@
 	</div>
 
 	<footer>
-		<p>Thanks for visiting!</p>
+    <p><a href="no-search">No Search</a></p>
+    <p><a href="no-search">Search</a></p>
 	</footer>
 </body>
 </html>
