--- a/all-recipes.html
+++ b/all-recipes.html
@@ -41,8 +41,8 @@
 	</div>
 
 	<footer>
-    <p><a href="no-search">No Search</a></p>
-    <p><a href="no-search">Search</a></p>
+    <p><a href="no-search.html">No Search</a></p>
+    <p><a href="search-found.html">Search</a></p>
 	</footer>
 </body>
 </html>
