--- a/search-found.html
+++ b/search-found.html
@@ -30,7 +30,7 @@
 	<h2>Single Recipe</h2>
 
   <footer>
-    <p><a href="no-search">No Search</a></p>
+    <p><a href="no-search.html">No Search</a></p>
     <p><a href="no-search">Search</a></p>
   </footer>
 </body>
