--- a/categories.html
+++ b/categories.html
@@ -30,8 +30,8 @@
 	<h2>Categories</h2>
 
   <footer>
-    <p><a href="no-search">No Search</a></p>
-    <p><a href="no-search">Search</a></p>
+    <p><a href="no-search.html">No Search</a></p>
+    <p><a href="search-found.html">Search</a></p>
   </footer>
 </body>
 </html>
