--- a/recipe.html
+++ b/recipe.html
@@ -33,8 +33,8 @@
 
 
   <footer>
-    <p><a href="no-search">No Search</a></p>
-    <p><a href="no-search">Search</a></p>
+    <p><a href="no-search.html">No Search</a></p>
+    <p><a href="search-found.html">Search</a></p>
   </footer>
 </body>
 </html>
