--- a/search-found.html
+++ b/search-found.html
@@ -27,11 +27,11 @@
   </header>
     
     
-	<h2>Single Recipe</h2>
+	<h2>Search Found!</h2>
 
   <footer>
     <p><a href="no-search.html">No Search</a></p>
-    <p><a href="no-search">Search</a></p>
+    <p><a href="search-found.html">Search</a></p>
   </footer>
 </body>
 </html>
