--- a/categories.html
+++ b/categories.html
@@ -29,6 +29,19 @@
     
 	<h2>Categories</h2>
 
+  <hr class="solid">
+<div class="categories">
+
+  <button>Italian</button>
+  <button>Korean</button>
+  <button>Chinese</button>
+  <button>Indian</button>
+  <button>Spanish</button>
+  <button>French</button>
+
+</div>
+<hr class="solid">
+
   <footer>
     <p><a href="no-search.html">No Search</a></p>
     <p><a href="search-found.html">Search</a></p>
