--- a/search-found.html
+++ b/search-found.html
@@ -26,8 +26,9 @@
   </div>
   </header>
     
-    
+<div class="search-found">
 	<h2>Search Found!</h2>
+</div> 
 
   <footer>
     <p><a href="no-search.html">No Search</a></p>
