--- a/about.html
+++ b/about.html
@@ -37,8 +37,8 @@
 <hr class="solid">
 
 	<footer>
-    <p><a href="no-search.html">No Search</a></p>
-    <p><a href="search-found.html">Search</a></p>
+    <p><a class= "footer-links" href="no-search.html">No Search</a></p>
+    <p><a class= "footer-links" href="search-found.html">Search</a></p>
 	</footer>
 
 </body>
