no search removed

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </div>
 
   <li><a href="about.html">About</a></li>
-  <li><a href="categories.html">Categories</a></li>
+  <li><a href="categories.html">Proteins</a></li>
   <li><a href="new-all-recipes.php">All Recipes</a></li>
 </ul>
   </header>
@@ -36,7 +36,6 @@
 <hr class="solid">
 
 <footer>
-  <p><a href="no-search.html">No Search</a></p>
   <p><a href="search-found.html">Search</a></p>
 </footer>
 </body>
