--- a/search-found.html
+++ b/search-found.html
@@ -32,7 +32,7 @@
 </div> 
 
   <footer>
-    <p><a href="search-found.html">Search</a></p>
+s    <p><a href="search-found.html">Search</a></p>
   </footer>
 </body>
 </html>
