--- a/cuisines.html
+++ b/cuisines.html
@@ -31,16 +31,16 @@
 	<h2>Cuisines</h2>
 <p>Don't Know What To Eat? Explore Here First.</p>
 	<div class="cuisine-grid">
-    <a class="cuisine" href="recipe.html"><img src="images/elementor-placeholder-image.webp" alt="gray-placeholder-image"></a>
-    <a class="cuisine" href="recipe.html"><img src="images/elementor-placeholder-image.webp" alt="gray-placeholder-image"></a>
-    <a class="cuisine" href="recipe.html"><img src="images/elementor-placeholder-image.webp" alt="gray-placeholder-image"></a>
-    <a class="cuisine" href="recipe.html"><img src="images/elementor-placeholder-image.webp" alt="gray-placeholder-image"></a>
-    <a class="cuisine" href="recipe.html"><img src="images/elementor-placeholder-image.webp" alt="gray-placeholder-image"></a>
-    <a class="cuisine" href="recipe.html"><img src="images/elementor-placeholder-image.webp" alt="gray-placeholder-image"></a>
-    <a class="cuisine" href="recipe.html"><img src="images/elementor-placeholder-image.webp" alt="gray-placeholder-image"></a>
-    <a class="cuisine" href="recipe.html"><img src="images/elementor-placeholder-image.webp" alt="gray-placeholder-image"></a>
-    <a class="cuisine" href="recipe.html"><img src="images/elementor-placeholder-image.webp" alt="gray-placeholder-image"></a>
-    <a class="cuisine" href="recipe.html"><img src="images/elementor-placeholder-image.webp" alt="gray-placeholder-image"></a>
+    <a class="cuisine" href="recipe.html"><img src="images/elementor-placeholder-image.webp" alt="gray-placeholder-image">American</a>
+    <a class="cuisine" href="recipe.html"><img src="images/elementor-placeholder-image.webp" alt="gray-placeholder-image">Asian</a>
+    <a class="cuisine" href="recipe.html"><img src="images/elementor-placeholder-image.webp" alt="gray-placeholder-image">French</a>
+    <a class="cuisine" href="recipe.html"><img src="images/elementor-placeholder-image.webp" alt="gray-placeholder-image">Indian</a>
+    <a class="cuisine" href="recipe.html"><img src="images/elementor-placeholder-image.webp" alt="gray-placeholder-image">Italian</a>
+    <a class="cuisine" href="recipe.html"><img src="images/elementor-placeholder-image.webp" alt="gray-placeholder-image">Korean</a>
+    <a class="cuisine" href="recipe.html"><img src="images/elementor-placeholder-image.webp" alt="gray-placeholder-image">Mediterranean</a>
+    <a class="cuisine" href="recipe.html"><img src="images/elementor-placeholder-image.webp" alt="gray-placeholder-image">Mexican</a>
+    <a class="cuisine" href="recipe.html"><img src="images/elementor-placeholder-image.webp" alt="gray-placeholder-image">Middle Eastern</a>
+    <a class="cuisine" href="recipe.html"><img src="images/elementor-placeholder-image.webp" alt="gray-placeholder-image">Thai</a>
   </div>
   
   <footer>
