--- a/filter-results.html
+++ b/filter-results.html
@@ -22,7 +22,7 @@
   </div>
 
   <li><a href="about.html">About</a></li>
-  <li><a href="categories.html">Categories</a></li>
+  <li><a href="cuisines.html">Cuisines</a></li>
   <li><a href="all-recipes.html">All Recipes</a></li>
 </ul>
   </header>
