--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </div>
 
   <li><a href="about.html">About</a></li>
-  <li><a href="cuisines.html">Cuisines</a></li>
+  <li><a href="cuisines.php">Cuisines</a></li>
   <li><a href="new-all-recipes.php">All Recipes</a></li>
 </ul>
   </header>
