--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <li><a href="about.html">About</a></li>
   <li><a href="cuisines.php">Cuisines</a></li>
-  <li><a href="new-all-recipes.php">All Recipes</a></li>
+  <li><a href="all-recipes.php">All Recipes</a></li>
 </ul>
   </header>
 
