--- a/no-search.html
+++ b/no-search.html
@@ -22,8 +22,8 @@
   </div>
 
   <li><a href="about.html">About</a></li>
-  <li><a href="cuisines.html">Cuisines</a></li>
-  <li><a href="all-recipes.html">All Recipes</a></li>
+  <li><a href="cuisines.php">Cuisines</a></li>
+  <li><a href="all-recipes.php">All Recipes</a></li>
 </ul>
   </header>
    
