--- a/no-search.html
+++ b/no-search.html
@@ -7,26 +7,28 @@
         <link rel="stylesheet" href="css/style.css">
       </head>
 <body>
-  <header class="header">
-    <a href="index.html" class="logo"><h1>Nibbly</h1></a>
-    <input class="menu-btn" type="checkbox" id="menu-btn" />
-    <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-    <ul class="menu">
-        
-    <div class="topnav">
-    <div class="search-container">
-      <form action="/action_page.php">
-        <input type="text" placeholder="Search Here!" name="search">
-      </form>
-    </div>
-  </div>
-
-  <li><a href="about.html">About</a></li>
-  <li><a href="cuisines.php">Cuisines</a></li>
-  <li><a href="all-recipes.php">All Recipes</a></li>
+<!-- search bar-->
+<header class="header">
+  <a href="index.html" class="logo"><h1>Nibbly</h1></a>
+  <input class="menu-btn" type="checkbox" id="menu-btn" />
+  <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+  <ul class="menu">
+      
+<li><a href="about.html">About</a></li>
+<li><a href="cuisines.php">Cuisines</a></li>
+<li><a href="all-recipes.php">All Recipes</a></li>
 </ul>
-  </header>
-   
+</header>
+
+<div class="topnav">
+  <div class="search-container">
+    <form action="/action_page.php">
+      <input type="text" placeholder="Search Here!" name="search">
+    </form>
+  </div>
+</div>
+<!--search bar end-->
+ 
 <div class="nothing-found">
 <img class="sad-glass" src="icons/Nothing Found.png" alt="sad magnifying glass">
 <p class="no-results">Sorry, no results found. Let's find a fresh tart.</p>
