--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         <link rel="stylesheet" href="css/style.css">
       </head>
 <body>
-
+<div class="search-bar">
+<!-- search bar-->
   <header class="header">
     <a href="index.html" class="logo"><h1>Nibbly</h1></a>
     <input class="menu-btn" type="checkbox" id="menu-btn" />
@@ -28,12 +29,14 @@
       </form>
     </div>
   </div>
+</div>
+<!--search bar end-->
 
 <h2 id="intro">What's Cooking, Good Looking?</h2>
+<p id="home-bio">
+  Nibbly transforms everyday meals into flavor-packed, feel-good moments you’ll look forward to. Whether it’s a quick fix after a busy day or bold new flavors to try, we make cooking easy, exciting, and oh-so-delicious—one irresistible recipe at a time. Ready to bring some extra flavor to your life? <i>Let’s get started.</i>
+</p>
 
-<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-<img class="placeholder-image" src="images/elementor-placeholder-image.webp" alt="gray-placeholder-image">
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> -->
 
 <footer>
   <p><a href="search-found.html">Search</a></p>
