--- a/about.html
+++ b/about.html
@@ -30,13 +30,17 @@
 <!--search bar end-->
   
 		
-	<h2>About</h2>
+	<h2>About Us</h2>
 	<div class="about">
 	<img class="about-image" src="images/elementor-placeholder-image.webp" alt="gray-placeholder-image">
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	<p>At Nibbly, we believe every meal is an opportunity to create something memorable. We’re here to transform your everyday cooking into flavor-packed, feel-good moments that you’ll actually look forward to. Whether you’re whipping up a quick fix after a hectic day or exploring bold new flavors from around the world, Nibbly makes it simple, exciting, and oh-so-delicious.
+
+    Our mission is to take the stress out of cooking by offering recipes that are easy to follow, fun to make, and guaranteed to delight. From comforting classics to innovative dishes, we’ve curated a collection of ideas that cater to all cravings, moods, and skill levels.
+    
+    We’re more than just a recipe website—we’re your trusted partner in the kitchen, inspiring creativity, adventure, and a love for great food. One recipe at a time, Nibbly is here to make cooking easier, tastier, and way more fun. So grab your apron, turn up the heat, and let’s get cooking!
+  </p>
 	</div>
 
-<hr class="solid">
 
 	<footer>
     <p><a class= "footer-links" href="search-found.html">Search</a></p>
