--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
   </div>
 </div>
 <!--search bar end-->
-
-<h2 id="intro">What's Cooking, Good Looking?</h2>
-<p id="home-bio">
-  Nibbly transforms everyday meals into flavor-packed, feel-good moments you’ll look forward to. Whether it’s a quick fix after a busy day or bold new flavors to try, we make cooking easy, exciting, and oh-so-delicious—one irresistible recipe at a time. Ready to bring some extra flavor to your life? <i>Let’s get started.</i>
-</p>
+<div class="nibbly-container">
+<p class="home-text">Ready to bring some extra flavor to your life?</p>
+<img class="nibbly-colors"src="images/home-page-logo.png">
+<p class="home-text">What's cooking, good looking?</p>
+</div>
+<p id="home-bold"class="home-text"><b>Let's get started.</b></p>
 
 
 <footer>
