--- a/about.html
+++ b/about.html
@@ -32,13 +32,17 @@
 		
 	<h2>About Us</h2>
 	<div class="about">
-	<img class="about-image" src="images/elementor-placeholder-image.webp" alt="gray-placeholder-image">
-	<p>At Nibbly, we believe every meal is an opportunity to create something memorable. We’re here to transform your everyday cooking into flavor-packed, feel-good moments that you’ll actually look forward to. Whether you’re whipping up a quick fix after a hectic day or exploring bold new flavors from around the world, Nibbly makes it simple, exciting, and oh-so-delicious.
-
-    Our mission is to take the stress out of cooking by offering recipes that are easy to follow, fun to make, and guaranteed to delight. From comforting classics to innovative dishes, we’ve curated a collection of ideas that cater to all cravings, moods, and skill levels.
-    
-    We’re more than just a recipe website—we’re your trusted partner in the kitchen, inspiring creativity, adventure, and a love for great food. One recipe at a time, Nibbly is here to make cooking easier, tastier, and way more fun. So grab your apron, turn up the heat, and let’s get cooking!
+	<!-- <img class="about-image" src="images/elementor-placeholder-image.webp" alt="gray-placeholder-image"> -->
+	<p>At Nibbly, we believe every meal is an opportunity to create something special. We’re here to transform your everyday cooking into flavor-packed, feel-good moments you’ll look forward to. Whether it’s a quick fix for a busy day or an adventure in bold, global flavors, Nibbly makes cooking simple, exciting, and absolutely delicious.
   </p>
+  <img class="about-image" src="images/delicious-heart.png">
+
+  <p>Our mission is to take the stress out of cooking by offering recipes that are easy to follow, fun to make, and guaranteed to delight. From comforting classics to innovative dishes, we’ve curated a collection of ideas that cater to all cravings, moods, and skill levels.
+  </p>
+    <img class="about-image" src="images/table.png">
+    <p>We’re more than just a recipe website—we’re your trusted partner in the kitchen, inspiring creativity, adventure, and a love for great food. One recipe at a time, Nibbly is here to make cooking easier, tastier, and way more fun. So grab your apron, turn up the heat, and let’s get cooking!
+  </p>
+  <img class="about-image" src="images/satisfied-user.png">
 	</div>
 
 
