--- a/search-found.html
+++ b/search-found.html
@@ -34,7 +34,7 @@
 </div> 
 
   <footer>
-s    <p><a href="search-found.html">Search</a></p>
+    <p><a href="search-found.html">Search</a></p>
   </footer>
 </body>
 </html>
