--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <link rel="stylesheet" href="css/style.css">
       </head>
 <body>
+<div class="fixed-container">
 <div class="search-bar">
-<!-- search bar-->
   <header class="header">
     <a href="index.html" class="logo"><img src="images/nibbly-logo.png"></a>
     <input class="menu-btn" type="checkbox" id="menu-btn" />
@@ -30,7 +30,8 @@
     </div>
   </div>
 </div>
-<!--search bar end-->
+</div>
+
 <div class="nibbly-container">
 <p class="home-text">Ready to bring some extra flavor to your life?</p>
 <img class="nibbly-colors"src="images/home-page-logo.png">
