--- a/search-found.html
+++ b/search-found.html
@@ -8,26 +8,30 @@
       </head>
 <body>
 <!-- search bar-->
-<header class="header">
-  <a href="index.html" class="logo"><img src="images/nibbly-logo.png"></a>
-  <input class="menu-btn" type="checkbox" id="menu-btn" />
-  <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-  <ul class="menu">
-      
-<li><a href="about.html">About</a></li>
-<li><a href="cuisines.php">Cuisines</a></li>
-<li><a href="all-recipes.php">All Recipes</a></li>
-</ul>
-</header>
-
-<div class="topnav">
-  <div class="search-container">
-    <form action="/action_page.php">
-      <input type="text" placeholder="Search Here!" name="search">
-    </form>
+<div class="fixed-container">
+  <div class="search-bar">
+    <header class="header">
+      <a href="index.html" class="logo"><img src="images/nibbly-logo.png"></a>
+      <input class="menu-btn" type="checkbox" id="menu-btn" />
+      <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+      <ul class="menu">
+          
+    <li><a href="about.html">About</a></li>
+    <li><a href="cuisines.php">Cuisines</a></li>
+    <li><a href="all-recipes.php">All Recipes</a></li>
+  </ul>
+    </header>
+  
+    <div class="topnav">
+      <div class="search-container">
+        <form action="/action_page.php">
+          <input type="text" placeholder="Search Here!" name="search">
+        </form>
+      </div>
+    </div>
   </div>
-</div>
-<!--search bar end-->
+  </div>
+  <!--search bar end-->
   
 <div class="search-found">
 	<h2>Search Found!</h2>
