--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="css/style.css">
       </head>
 <body>
+<!--search bar-->
 <div class="fixed-container">
 <div class="search-bar">
   <header class="header">
@@ -31,7 +32,7 @@
   </div>
 </div>
 </div>
-
+<!--end of search bar-->
 <div class="nibbly-container">
 <p class="home-text">Ready to bring some extra flavor to your life?</p>
 <img class="nibbly-colors"src="images/home-page-logo.png">
