--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="topnav">
     <div class="search-container">
       <form action="/action_page.php">
-        <input type="text" placeholder="Search Here!" name="search">
+        <input type="text" placeholder="Feelin' Hungry?" name="search">
       </form>
     </div>
   </div>
@@ -34,15 +34,15 @@
 </div>
 <!--end of search bar-->
 <div class="nibbly-container">
-<p class="home-text">Ready to bring some extra flavor to your life?</p>
+<p class="home-text">What's cooking,</p>
 <img class="nibbly-colors"src="images/home-page-logo.png">
-<p class="home-text">What's cooking, good looking?</p>
+<p class="home-text">good looking?</p>
 </div>
 <p id="home-bold"class="home-text"><b>Let's get started.</b></p>
 
 
 <footer>
-  <p><a href="search-found.html">Search</a></p>
+  <p>2024 &copy;. Nibbly</p>
 </footer>
 </body>
 </html>
