--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
 
 
 	<footer>
-    <p><a class= "footer-links" href="search-found.html">Search</a></p>
+    <p>2024 &copy;. Nibbly</p>
 	</footer>
 
 </body>
