--- a/cuisines.html
+++ b/cuisines.html
@@ -46,7 +46,7 @@
   </div>
   
   <footer>
-    <p><a href="search-found.html">Search</a></p>
+    <p>2024 &copy;. Nibbly</p>
   </footer>
 </body>
 </html>
