--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 </div>
 <!--end of search bar-->
 <div class="nibbly-container">
-<p class="home-text">What's cooking,</p>
+<p class="home-text">What's Cooking,</p>
 <img class="nibbly-colors"src="images/home-page-logo.png">
-<p class="home-text">good looking?</p>
+<p class="home-text">Good Looking?</p>
 </div>
 <p id="home-bold"class="home-text"><b>Let's get started.</b></p>
 
