--- a/recipe.html
+++ b/recipe.html
@@ -59,7 +59,7 @@
 <hr class="solid">
 
   <footer>
-    <p><a href="search-found.html">Search</a></p>
+    <p>2024 &copy;. Nibbly</p>
   </footer>
 </body>
 </html>
