--- a/no-search.html
+++ b/no-search.html
@@ -38,9 +38,8 @@
 <p class="no-results">Sorry, no results found. Let's find a fresh tart.</p>
 </div>
 
-  <footer>
-    <p><a href="no-search.html">No Search</a></p>
-    <p><a href="search-found.html">Search</a></p>
-  </footer>
+<footer>
+  <p>2024 &copy;. Nibbly</p>
+</footer>
 </body>
 </html>
