--- a/filter-results.html
+++ b/filter-results.html
@@ -30,8 +30,8 @@
 <!--search bar end-->
   
     
-  <footer>
-    <p><a href="search-found.html">Search</a></p>
-  </footer>
+<footer>
+  <p>2024 &copy;. Nibbly</p>
+</footer>
 </body>
 </html>
