--- a/search-found.html
+++ b/search-found.html
@@ -37,8 +37,8 @@
 	<h2>Search Found!</h2>
 </div> 
 
-  <footer>
-    <p><a href="search-found.html">Search</a></p>
-  </footer>
+<footer>
+  <p>2024 &copy;. Nibbly</p>
+</footer>
 </body>
 </html>
