--- a/no-search.html
+++ b/no-search.html
@@ -34,7 +34,7 @@
   <!--search bar end-->
  
 <div class="nothing-found">
-<img class="sad-glass" src="icons/Nothing Found.png" alt="sad magnifying glass">
+<img class="sad-glass" src="icons/Nothing-Found.png" alt="sad magnifying glass">
 <p class="no-results">Sorry, no results found. Let's find a fresh tart.</p>
 </div>
 
