--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         <link rel="stylesheet" href="css/style.css">
       </head>
 <body>
-<!--search bar-->
+
+<!-- search bar-->
 <div class="fixed-container">
 <div class="search-bar">
   <header class="header">
@@ -17,7 +18,7 @@
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <ul class="menu">
         
-  <li><a href="about.html">About</a></li>
+    <li><a href="about.php">About</a></li>
   <li><a href="cuisines.php">Cuisines</a></li>
   <li><a href="all-recipes.php">All Recipes</a></li>
 </ul>
@@ -25,24 +26,29 @@
 
   <div class="topnav">
     <div class="search-container">
-      <form action="/action_page.php">
-        <input type="text" placeholder="Feelin' Hungry?" name="search">
+      <form action="index.php" method="GET">
+      <input type="text" placeholder="Feelin' Hungry?" name="search" name="search" value="<?php echo htmlspecialchars($searchTerm); ?>">
       </form>
     </div>
   </div>
 </div>
 </div>
-<!--end of search bar-->
-<div class="nibbly-container">
-<p class="home-text">What's Cooking,</p>
-<img class="nibbly-colors"src="images/home-page-logo.png">
-<p class="home-text">Good Looking?</p>
-</div>
-<p id="home-bold"class="home-text"><b>Let's get started.</b></p>
+<!--search bar end-->
 
+<h2>Welcome!</h2>
+<p>
+<?php
+        // Dynamic Content Example
+        echo "<h3>Today's Highlighted Recipe</h3>";
+        echo "<p>Check out our new recipe: <a href='display_recipe.php?id=1'>Ancho-Orange Chicken</a></p>";
+        ?>
+		 <p>
+<img class="placeholder-image" src="images/elementor-placeholder-image.webp" alt="gray-placeholder-image">
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<hr class="solid">
 
 <footer>
-  <p>2024 &copy;. Nibbly</p>
+    <p>2024 &copy;. Nibbly</p>
 </footer>
 </body>
 </html>
