--- a/case-study.html
+++ b/case-study.html
@@ -3,10 +3,36 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Case Study/title>
-<link rel="stylesheet" href="/css/screen.css">
+<title>Case Study</title>
+<link rel="stylesheet" href="./css/screen.css">
 </head>
 <body>
+<!--hero image-->
+<h1>The Overview</h1>
+<h2>Introduction</h2>
+<p>lorem ipsum</p>
+
+<h1>Context &#38; Challenge</h1>
+<h2>Background</h2>
+<p>lorem ipsum</p>
+
+<h2>The Problem</h2>
+<p>lorem ipsum</p>
+
+<h2>Goals &#38; Objectives </h2>
+<p>lorem ipsum</p>
+
+<h1>Process &#38; Insight</h1>
+<h2>Target Audience</h2>
+<p>lorem ipsum</p>
+
+<h1>The Solution</h1>
+<p>lorem ipsum</p>
+
+
+<h1>The Results</h1>
+<h2>Conclusion</h2>
+<p>lorem ipsum</p>
 
 
 </body>
